# devforge

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260212_0001_initial_schema.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: __init__.py  analytics.py  auth.py  github.py  portfolios.py  public.py  templates.py  users.py
backend/app/core/: database.py  exceptions.py  redis.py  security.py
backend/app/models/: __init__.py  analytics_event.py  commit.py  generation_job.py  github_profile.py  mixins.py  portfolio.py  repository.py  skill.py  user.py
backend/app/schemas/: analytics.py  auth.py  github.py  portfolio.py  public.py  user.py
backend/app/services/: ai.py  auth.py  cache.py  deployer.py  events.py  github.py  public_portfolio.py  rate_limiter.py
backend/app/tasks/: ai_tasks.py  analysis.py  celery_app.py  generation.py  github_sync.py
backend/app/utils/: logging.py  metrics.py
backend/tests/: conftest.py
backend/tests/test_api/: test_health.py
backend/tests/test_services/: test_github_public.py  test_rate_limiter.py  test_security.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: providers.tsx
scripts/: deploy-backend-railway.sh  deploy-frontend-vercel.sh
(+29 files in other folders)
